# advanced-programming-project

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
frontend/: index.html
frontend/src/: App.tsx  index.css
src/tlvflow/: logging.py
src/tlvflow/api/: app.py  routes.py  schemas.py
src/tlvflow/api/routers/: health_router.py  rides_router.py  (+3 more)
src/tlvflow/domain/: Payment_Service.py  __init__.py  enums.py  maintenance_event.py  models.py  payment.py  reports.py  rides.py  stations.py  users.py  vehicles.py
src/tlvflow/persistence/: degraded_vehicles_repository.py  in_memory.py  loaders.py  maintenance_repository.py  rides_repository.py  state_store.py  users_repository.py
src/tlvflow/repositories/: interfaces.py
src/tlvflow/services/: degraded_vehicles_service.py  link_vehicles.py  stations_service.py  users_service.py  vehicles_service.py
tests/: test_health.py  test_loaders.py  test_reports.py  test_repositories.py  test_stations.py  test_users.py  test_vehicles.py
tests/integration/: test_active_users.py  test_health.py  test_vehicles_router.py
tests/unit/: test_loaders.py  test_payment_service.py  test_state_persistence.py  test_stations_service.py
tests/unit/modules/: test_maintenance_event.py  test_reports.py  test_rides.py  test_users.py  test_vehicles.py
tests/unit/repositories/: test_degraded_vehicles_repository.py  test_maintenance_repository.py  test_rides_repository.py  test_users_repository.py
tests/unit/services/: test_degraded_vehicles_service.py  test_link_vehicles.py
